tambah cordova.js

--- a/www/index.html
+++ b/www/index.html
@@ -58,6 +58,7 @@
     <script src="js/backbone.js"></script>
     
     <script src="phonegap.js"></script>
+    <script src="cordova.js"></script>
     
     <!-- holds our templates in a single global 'templates' variable --> 
     <script src="js/templates.js"></script>
